Second commit - Implementacion de la sección de "Nuestra historia"

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="imágenes/plato2.jpg" class="d-block w-100" alt="Plato 2">
+                                <img src="/imágenes/plato2.png" class="d-block w-100" alt="Plato 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Plato 2</h5>
                                     <p>Ingredientes: Pasta, salsa boloñesa, queso parmesano. Precio: $8.000</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="imágenes/plato3.jpg" class="d-block w-100" alt="Plato 3">
+                                <img src="/imágenes/plato3.png" class="d-block w-100" alt="Plato 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Plato 3</h5>
                                     <p>Ingredientes: Ensalada César, pollo, crutones. Precio: $6.500</p>
@@ -120,21 +120,21 @@
                     <div id="bebestiblesCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="imágenes/bebestible1.jpg" class="d-block w-100" alt="Bebestible 1">
+                                <img src="/imágenes/bebestible1.png" class="d-block w-100" alt="Bebestible 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Bebestible 1</h5>
                                     <p>Ingredientes: Jugo natural. Precio: $2.000</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="imágenes/bebestible2.jpg" class="d-block w-100" alt="Bebestible 2">
+                                <img src="/imágenes/bebestible2.png" class="d-block w-100" alt="Bebestible 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Bebestible 2</h5>
                                     <p>Ingredientes: Limonada con menta. Precio: $2.500</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="imágenes/bebestible3.jpg" class="d-block w-100" alt="Bebestible 3">
+                                <img src="/imágenes/bebestible3.png" class="d-block w-100" alt="Bebestible 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Bebestible 3</h5>
                                     <p>Ingredientes: Smoothie de frutas. Precio: $3.000</p>
@@ -149,6 +149,40 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Siguiente</span>
                         </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección de historia de la empresa -->
+        <section id="historia" class="mb-5">
+            <h2 class="text-center mb-4">Nuestra Historia</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="/imágenes/logo.png" class="card-img-top" alt="Historia 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Nuestros Inicios</h5>
+                            <p class="card-text">Hace 50 años, comenzamos con un pequeño local en el corazón de la ciudad, ofreciendo recetas caseras y un servicio cálido que rápidamente conquistó a nuestros primeros clientes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="imágenes/crecimiento.png" class="card-img-top" alt="Historia 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Crecimiento y Expansión</h5>
+                            <p class="card-text">Con el tiempo, nuestro compromiso con la calidad y la innovación nos permitió crecer y expandirnos, manteniendo siempre la esencia que nos caracteriza.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="imágenes/testimonios.png" class="card-img-top" alt="Testimonio Cliente">
+                        <div class="card-body">
+                            <h5 class="card-title">Testimonios de Clientes</h5>
+                            <p class="card-text">"El mejor lugar para disfrutar de una comida deliciosa y un ambiente acogedor. ¡Siempre vuelvo por más!" - Cliente satisfecho.</p>
+                        </div>
                     </div>
                 </div>
             </div>
