Third commit - Implementacion de la seccion "Nuestras sucursales"

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <img src="/imágenes/logo.png" class="card-img-top" alt="Historia 1">
                         <div class="card-body">
                             <h5 class="card-title">Nuestros Inicios</h5>
-                            <p class="card-text">Hace 50 años, comenzamos con un pequeño local en el corazón de la ciudad, ofreciendo recetas caseras y un servicio cálido que rápidamente conquistó a nuestros primeros clientes.</p>
+                            <p class="card-text">Hace 50 años, comenzamos con un pequeño local en el corazón de la ciudad, ofreciendo recetas caseras y un servicio cálido que rápidamente conquistó a nuestros clientes</p>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,37 @@
                 </div>
             </div>
         </section>
-
+        
+        <!-- Sección de sucursales -->
+        <section id="sucursales" class="mb-5">
+            <h2 class="text-center mb-4">Nuestras Sucursales</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Sucursal 1</h3>
+                    <img src="imágenes/sucursal1.jpg" class="img-fluid mb-2" alt="Sucursal 1 - Imagen 1">
+                    <p>Dirección: Costanera Arturo Prat 645, Valdivia, Región de Los Ríos</p>
+                    <p>Teléfono: +56 9 1234 5678</p>
+                    <p>Correo: sucursal1@aniquilador.com</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-73.24500000000002!3d-39.815000000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zQXYuIEFydHVybyBQcmF0IDY0NSwgVmFsZGl2aWE!5e0!3m2!1ses!2scl!4v1680000000000!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <h3>Sucursal 2</h3>
+                    <img src="imágenes/sucursal2.jpg" class="img-fluid mb-2" alt="Sucursal 2 - Imagen 1">
+                    <p>Dirección: Av. Italia 1239, Barrio Italia, Providencia, Región Metropolitana</p>
+                    <p>Teléfono: +56 9 1234 8765</p>
+                    <p>Correo: sucursal2@aniquilador.com</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-70.62000000000002!3d-33.440000000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zQXYuIEl0YWxpYSAxMjM5LCBCYXJyaW8gSXRhbGlhLCBQcm92aWRlbmNpYSwgUsOpc2lvbiBNZXRyb3BvbGl0YW5h!5e0!3m2!1ses!2scl!4v1680000000001!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <h3>Sucursal 3</h3>
+                    <img src="imágenes/sucursal3.jpg" class="img-fluid mb-2" alt="Sucursal 3 - Imagen 1">
+                    <p>Dirección: Av. Costanera Vicente Pérez Rosales 1281, Puerto Varas, Región de Los Lagos</p>
+                    <p>Teléfono: +56 9 4321 5678</p>
+                    <p>Correo: sucursal3@aniquilador.com</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-72.99000000000002!3d-41.32000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zQXYuIENvc3RhbmVyYSBWaWNlbnRlIFDDqXJleiBSb3NhbGVzIDEyODEsIFB1ZXJ0byBWYXJhcywgUsOpc2lvbiBkZSBMb3MgTGFnb3M!5e0!3m2!1ses!2scl!4v1680000000002!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
