Fourth commit - Implementacion de la seccion de "Contacto" y se agrego la seccion de postres en el carrusel de la carta

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#menu">Nuestra Carta</a>
@@ -44,27 +44,27 @@
             <h2 class="text-center mb-4">Nuestra Carta</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <h3>Sandwiches</h3>
+                    <h3>Sándwiches</h3>
                     <div id="sandwichCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="imágenes/sandwich1.png" class="d-block w-100" alt="Sandwich 1">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Sandwich 1</h5>
+                                    <h5>Sándwich 1</h5>
                                     <p>Ingredientes: Pan, carne, lechuga, tomate. Precio: $5.000</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="imágenes/sandwich2.png" class="d-block w-100" alt="Sandwich 2">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Sandwich 2</h5>
+                                    <h5>Sándwich 2</h5>
                                     <p>Ingredientes: Pan integral, queso, jamón, palta. Precio: $6.000</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="imágenes/sandwich3.png" class="d-block w-100" alt="Sandwich 3">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Sandwich 3</h5>
+                                    <h5>Sándwich 3</h5>
                                     <p>Ingredientes: Pan, pollo, cebolla caramelizada, champiñones. Precio: $7.500</p>
                                 </div>
                             </div>
@@ -151,6 +151,42 @@
                         </button>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <h3>Postres</h3>
+                    <div id="postresCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/imágenes/postre1.png" class="d-block w-100" alt="Postre 1">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Postre 1</h5>
+                                    <p>Ingredientes: Tarta de frutas. Precio: $3.500</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imágenes/postre2.png" class="d-block w-100" alt="Postre 2">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Postre 2</h5>
+                                    <p>Ingredientes: Brownie con helado. Precio: $4.000</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imágenes/postre3.png" class="d-block w-100" alt="Postre 3">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Postre 3</h5>
+                                    <p>Ingredientes: Cheesecake de frutilla. Precio: $4.500</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#postresCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#postresCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Siguiente</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -206,7 +242,7 @@
                     <p>Dirección: Av. Italia 1239, Barrio Italia, Providencia, Región Metropolitana</p>
                     <p>Teléfono: +56 9 1234 8765</p>
                     <p>Correo: sucursal2@aniquilador.com</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-70.62000000000002!3d-33.440000000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zQXYuIEl0YWxpYSAxMjM5LCBCYXJyaW8gSXRhbGlhLCBQcm92aWRlbmNpYSwgUsOpc2lvbiBNZXRyb3BvbGl0YW5h!5e0!3m2!1ses!2scl!4v1680000000001!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-70.62000000000002!3d-33.440000000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf3b4b4b4b4b%3A0x1234567890abcdef!2sAv.%20Italia%201239%2C%20Providencia%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1680000000001!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="col-md-4">
                     <h3>Sucursal 3</h3>
@@ -214,10 +250,54 @@
                     <p>Dirección: Av. Costanera Vicente Pérez Rosales 1281, Puerto Varas, Región de Los Lagos</p>
                     <p>Teléfono: +56 9 4321 5678</p>
                     <p>Correo: sucursal3@aniquilador.com</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-72.99000000000002!3d-41.32000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zQXYuIENvc3RhbmVyYSBWaWNlbnRlIFDDqXJleiBSb3NhbGVzIDEyODEsIFB1ZXJ0byBWYXJhcywgUsOpc2lvbiBkZSBMb3MgTGFnb3M!5e0!3m2!1ses!2scl!4v1680000000002!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0000000000005!2d-72.99000000000002!3d-41.32000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf3b4b4b4b4b%3A0xabcdef1234567890!2sVicente%20P%C3%A9rez%20Rosales%201281%2C%20Puerto%20Varas%2C%20Regi%C3%B3n%20de%20Los%20Lagos!5e0!3m2!1ses!2scl!4v1680000000002!5m2!1ses!2scl" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </section>
+
+        <!-- Sección de contacto -->
+        <section id="contacto" class="mb-5">
+            <h2 class="text-center mb-4">Contáctanos</h2>
+            <form id="contactForm" class="needs-validation" novalidate>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" required>
+                    <div class="invalid-feedback">Por favor, ingrese su nombre.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="correo" class="form-label">Correo</label>
+                    <input type="email" class="form-control" id="correo" required>
+                    <div class="invalid-feedback">Por favor, ingrese un correo válido.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="telefono" class="form-label">Teléfono</label>
+                    <input type="tel" class="form-control" id="telefono" required>
+                    <div class="invalid-feedback">Por favor, ingrese su teléfono.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="tipo" class="form-label">Tipo</label>
+                    <select class="form-select" id="tipo" required>
+                        <option value="">Seleccione una opción</option>
+                        <option value="consulta">Consulta</option>
+                        <option value="reclamo">Reclamo</option>
+                    </select>
+                    <div class="invalid-feedback">Por favor, seleccione una opción.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+                    <div class="invalid-feedback">Por favor, ingrese su mensaje.</div>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+
+    <footer class="text-center py-3 bg-dark text-white">
+        <p>Teléfono: Sucursal 1:+56 9 1234 5678, Sucursal 2:+56 9 1234 8765, Sucursal 3:+56 9 4321 5678</p>
+        <p>Síguenos en nuestras redes sociales: @El_aniquilador_del_hambre en todas las rede sociales</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
